# sp1-poc

./: Cargo.toml  README.md
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
verifier/: Cargo.toml
verifier/src/proof/: substrings.rs
