[workspace]
[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "51f313d" }

mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }

verifier = { path = "../verifier" }


serde = "1"
serde_json = "1.0.107"
rs_merkle = "1"
hex = "0.4"
bytes = {version = "1.4", features = ["serde"]}
opaque-debug = "0.3"

bimap = { version = "0.6.3", features = ["serde"] }
hashbrown = "0.14.3"
thiserror-no-std = "2.0.2"

[dev-dependencies]
rand_chacha = "0.3"
rand_core = "0.6"
bincode = "1"
rstest = "0.5"